# graphwiz

./: .gitignore  .hlint.yaml  CHANGELOG.md  Makefile  README.md  graphwiz.cabal  weeder.toml
.github/workflows/: haskell.yml
common/: Prelude.hs
example/: Main.hs  output.dot
src/Text/: Dot.hs
src/Text/Dot/: Attributes.hs  Build.hs  Monad.hs  Render.hs  Types.hs
test/: Golden.hs  Reporter.hs  Tests.hs
test/golden/: automatic_compound.dot  digraph_with_attributes.dot  path_test.dot  simple_graph.dot  strict_digraph_with_clusters.dot
