cabal-version:      2.4
name:               graphwiz
version:            0.8.0
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          Copyright (C) 2025 Antoine Leblanc
maintainer:         nicuveo@gmail.com
author:             Antoine Leblanc
homepage:           https://github.com/nicuveo/graphwiz
bug-reports:        https://github.com/nicuveo/graphwiz
synopsis:           DOT graph builder
description:
  Please see the README on GitHub at <https://github.com/nicuveo/graphwiz#readme>

category:           Data, Text
extra-source-files:
  .gitignore
  .stylish-haskell.yaml
  README.md

extra-doc-files:    CHANGELOG.md

source-repository head
  type:     git
  location: https://github.com/nicuveo/graphwiz.git

flag coverage
  description: Whether coverage should be generated
  default:     False
  manual:      True

common setup
  default-language:   GHC2021
  default-extensions:
    AllowAmbiguousTypes
    ApplicativeDo
    BangPatterns
    BlockArguments
    ConstraintKinds
    DataKinds
    DefaultSignatures
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingVia
    FlexibleContexts
    FlexibleInstances
    FunctionalDependencies
    GADTs
    GeneralizedNewtypeDeriving
    ImportQualifiedPost
    InstanceSigs
    LambdaCase
    MultiParamTypeClasses
    MultiWayIf
    NamedFieldPuns
    NoImplicitPrelude
    OverloadedStrings
    PackageImports
    RankNTypes
    RecordWildCards
    RoleAnnotations
    ScopedTypeVariables
    StandaloneDeriving
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    ViewPatterns

  ghc-options:
    -Wcompat -Wall -Wno-unused-do-bind -fwarn-tabs
    -fwarn-unused-packages -foptimal-applicative-do -fwrite-ide-info

library
  import:         setup

  if flag(coverage)
    exposed-modules:
      Text.Dot
      Text.Dot.Attributes
      Text.Dot.Build
      Text.Dot.Monad
      Text.Dot.Render
      Text.Dot.Types

    other-modules:   Prelude

  else
    exposed-modules: Text.Dot
    other-modules:
      Prelude
      Text.Dot.Attributes
      Text.Dot.Build
      Text.Dot.Monad
      Text.Dot.Render
      Text.Dot.Types

  hs-source-dirs: common src
  build-depends:
    , base                  >=4.16 && <5
    , containers            <1
    , hashable              >=1    && <2
    , lens                  >=5    && <6
    , mtl                   >=2    && <3
    , text                  >=2    && <3
    , text-builder          <1
    , transformers          <1
    , unordered-containers  <1

test-suite tests
  import:             setup
  type:               exitcode-stdio-1.0
  main-is:            Tests.hs
  other-modules:
    Golden
    Prelude

  hs-source-dirs:     common test
  ghc-options:        -F -pgmF=tasty-autocollect
  build-tool-depends: tasty-autocollect:tasty-autocollect
  build-depends:
    , base                  >=4.16 && <5
    , containers
    , filepath
    , graphwiz
    , hashable
    , lens
    , mtl
    , tasty
    , tasty-autocollect
    , tasty-golden
    , text
    , text-builder
    , transformers
    , unordered-containers

  default-language:   GHC2021

executable example
  import:           setup
  main-is:          Main.hs
  hs-source-dirs:   example
  build-depends:
    , base
    , graphwiz
    , lens
    , text-builder
  default-extensions:
    ImplicitPrelude

  default-language: GHC2021
